k8s/services/api-gateway/controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer  # Or LoadBalancer if available
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
